[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gentoopm"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
readme = "README.rst"
dynamic = ["version", "description"]
license = {file = "COPYING"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: System :: Installation/Setup",
]

[project.optional-dependencies]
pkgcore = ["pkgcore"]
portage = ["portage"]
test = [
    "pkgcore",
    "portage",
    "pytest",
]

[project.scripts]
gentoopmq = "gentoopm.querycli:main"

[project.urls]
Homepage = "https://github.com/mgorny/gentoopm/"

[tool.flit.sdist]
include = [
    "test-root",
    "tox.ini",
]

[[tool.mypy.overrides]]
module = [
    "pkgcore.*",
    "portage.*",
]
ignore_missing_imports = true
